--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ __pycache__/
 /sample/Bing.Samples.Api/Properties/PublishProfiles
 /templates/CodeSmith/CodeGenerator/02-Result
 *.DotSettings
+/MicrosoftOpcUa.Client/.vscode
